--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # База данных
-DATABASE_URL="mysql://root:JmWdYlbqhpsDnyJxqyZDdsWHPmguKIcE@hopper.proxy.rlwy.net:52231/railway"
+DATABASE_URL="mysql://root:nPJrJavrjfXcCrGKySYpFbAYOhjPlnIr@tramway.proxy.rlwy.net:46789/railway"
 
 # Другие настройки
 NEXT_PUBLIC_APP_URL="https://yoursite.vercel.app"
