--- a/package.json
+++ b/package.json
@@ -22,35 +22,29 @@
     ]
   },
   "dependencies": {
-    "@radix-ui/react-switch": "^1.1.3",
-    "@hookform/resolvers": "^4.1.3",
-    "@radix-ui/react-checkbox": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3",
-    "@prisma/client": "^5.11.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^12.5.0",
-    "lucide-react": "^0.475.0",
-    "next": "^15.2.4",
-    "react": "18.3.1",
-    "react-day-picker": "^9.6.3",
-    "react-dom": "18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0",
-    "server-only": "^0.0.1",
-    "sonner": "^2.0.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "5.11.0",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "date-fns": "^3.3.1",
+    "embla-carousel-react": "^8.0.0",
+    "framer-motion": "^11.0.14",
+    "lucide-react": "^0.363.0",
+    "next": "^14.2.1",
+    "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
+    "sonner": "^1.4.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
